--- a/examples/app/views/groups/new.html.erb
+++ b/examples/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
 <p><%= notice %></p>
 <form action="create" method="get">
-  Имя: <input type="text" name="user[name]"><br>
+Имя группы: <input type="text" name="group[name]"><br>
   <input type="submit" value="Submit">
 </form>
