--- a/examples/app/views/services/new.html.erb
+++ b/examples/app/views/services/new.html.erb
@@ -1,5 +1,6 @@
 <p><%= notice %></p>
 <form action="create" method="get">
 Имя сервиса: <input type="text" name="service[name]"><br>
+Буквенное обозначение для очереди: <input type="text" name="service[world_of_alphabet]"><br>
   <input type="submit" value="Submit">
 </form>
