--- a/examples/app/views/users/show.html.erb
+++ b/examples/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <p><%= notice %></p>
-<%= user.name %><br>
+Имя:<%= user.name %><br>
+Группа:<%= user.group_id %><br>
 <a href="index">На главную<a/>
