--- a/examples/app/views/services/edit.html.erb
+++ b/examples/app/views/services/edit.html.erb
@@ -1,6 +1,8 @@
 <p><%= notice %></p>
 <form action="update" method="get">
-  Имя: <input type="text" name="service[name]" value= '<%= service.name %>'> <br>
+  Имя: <input type="text" name="service[name]" value= '<%= service.name %>'> <br><br>
+  Буквенное обозначение в электронной очереди <br>
+  Буква: <input type="text" name="service[world_of_alphabet]" value= '<%= service.world_of_alphabet %>'> <br>
   <input type="hidden" name="id" value=<%= service.id %>> <br>
   <input type="submit" value="Submit">
 </form>
