--- a/examples/app/views/users/new.html.erb
+++ b/examples/app/views/users/new.html.erb
@@ -1,5 +1,11 @@
 <p><%= notice %></p>
 <form action="create" method="get">
   Имя: <input type="text" name="user[name]"><br>
+  Группа:
+  <p><select size="1" name="user[group_id]">
+    <% groups.each do |group| %>
+        <option value="<%= group.id %>"><%= group.name %></option>
+    <% end %>
+   </select></p>
   <input type="submit" value="Submit">
 </form>
