--- a/examples/app/views/layouts/_head.html.erb
+++ b/examples/app/views/layouts/_head.html.erb
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Добро пожаловать в административную панель</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <script type="text/javascript" src="/js/timedate.js"></script>
     <!-- BOOTSTRAP STYLES-->
     <link href="/css/bootstrap.css" rel="stylesheet" />
     <!-- FONTAWESOME STYLES-->
