--- a/examples/app/views/turns/registration.html.erb
+++ b/examples/app/views/turns/registration.html.erb
@@ -14,6 +14,7 @@
       <% end %>
     </form>
     </br></br>
+    <p><a href="internet_registration"><button type="button" class="btn btn-info btn-lg btn-block">Записаться на определенную дату и время</button></a></p></br>
     <p><button type="button" class="btn btn-info btn-lg btn-block">Оценить качество предоставленной услуги</button></p></br>
   </div>
 
