--- a/examples/app/views/clients/index.html.erb
+++ b/examples/app/views/clients/index.html.erb
@@ -1,3 +1,56 @@
-<% clients.each do |client| %>
-  <%= client.inspect %>
-<% end %>
+<%= render :head %>
+<body style="background-color:#d9edf7" onload="clock()">
+
+<div class="panel panel-success">
+
+  <div class="panel-heading"><h4><b>Время и дата: <span id="time"></span> <span id="data"></b>
+    <b><p class="navbar-right">Оператор: <%= users.first.name %>
+      <button class="btn btn-success">Выход</button></h4></p></b>
+    <b>Электронная очередь - терминал специалиста<br>
+      Статистика: количество в очереди: <%= clients.select { |client| client.status == nil }.size %><br>
+      За день: <%= clients.count %>
+
+  </div>
+
+  <table class="table">
+    <tr>
+      <td class="alert-info" style="width:100px"><b>Номер клиента</b></td>
+      <td class="alert-info" style="width:100px"><b>Часы</b></td>
+      <td class="alert-info" style="width:100px"><b>Минуты</b></td>
+      <td class="alert-info" style="width:100px"></td>
+      <td class="alert-info" style="width:100px"><b>Действия</b></td>
+      <td class="alert-info" style="width:100px"></td>
+    </tr>
+
+    <% clients.each do |client| %>
+      <% get_client = '<button class="btn btn-info" id="get_client">Вызвать</button>' %>
+      <% finish_client = '<button class="btn btn-info finish_client">Закончить прием</button>' %>
+      <% redirect_client = '<button class="btn btn-info">Переадресовать</button>' %>
+      <tr>
+        <td style="width:100px"> <%= client.symbol_name_turn %></td>
+        <td style="width:100px"> <%= client.hour %></td>
+        <td style="width:100px"> <%= client.minute %></td>
+        <td style="width:100px"><%= get_client if clients.first.id == client.id %></td>
+        <td style="width:100px"><%= finish_client if clients.first.id == client.id %></td>
+        <td style="width:500px">
+          <select class="btn" name="">
+            <option>Выберите адресата</option>
+            <% users.each do |user| %>
+              <option><%= user.name %></option>
+            <% end %>
+          </select>          <%= redirect_client if clients.first.id == client.id %></td>
+      </tr>
+      <% end %>
+
+  </table>
+</div>
+
+<script type="text/javascript">
+var all_tr = $('tr');
+$('td button[id="get_client"]').on('click', function () {
+    all_tr.removeClass('selected');
+    $(this).closest('tr').addClass('selected');
+});
+</script>
+
+</body>
