--- a/examples/app/views/layouts/_footer.html.erb
+++ b/examples/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
    <div id="footer-sec">
-        &copy; 2014 YourCompany | Design By : <a href="http://www.binarytheme.com/" target="_blank">BinaryTheme.com</a>
+        <h5>&copy; <b>2016г Государственное казенное учреждение "Единый соицальный расчетный центр" Забайкальского края</b></h5>
     </div>
