--- a/examples/app/views/layouts/_head.html.erb
+++ b/examples/app/views/layouts/_head.html.erb
@@ -4,6 +4,7 @@
     <title>Добро пожаловать в административную панель</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="/js/timedate.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.10.2.js"></script>
     <!-- BOOTSTRAP STYLES-->
     <link href="/css/bootstrap.css" rel="stylesheet" />
     <!-- FONTAWESOME STYLES-->
