--- a/examples/app/views/layouts/_nav_left.html.erb
+++ b/examples/app/views/layouts/_nav_left.html.erb
@@ -7,9 +7,10 @@
                             <img src="/img/user.png" class="img-thumbnail" />
 
                             <div class="inner-text">
-                                Jhon Deo Alex
+                              Администратор:<br>
+                                Кунгуров Евгений Витальевич
                             <br />
-                                <small>Last Login : 2 Weeks Ago </small>
+
                             </div>
                         </div>
 
@@ -17,117 +18,49 @@
 
 
                     <li>
-                        <a class="active-menu" href="index.html"><i class="fa fa-dashboard "></i>Dashboard</a>
+                        <a class="active-menu" href="index.html"><i class="fa fa-dashboard "></i>Панель инструментов</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-desktop "></i>Элементы меню <span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-desktop "></i>Настройки<span class="fa arrow"></span></a>
                          <ul class="nav nav-second-level">
                             <li>
-                                <a href="panel-tabs.html"><i class="fa fa-toggle-on"></i>Tabs & Panels</a>
+                                <a href="panel-tabs.html"><i class="fa fa-yelp"></i>Ограничение кол-ва людей в день</a>
                             </li>
                             <li>
-                                <a href="notification.html"><i class="fa fa-bell "></i>Notifications</a>
+                                <a href="notification.html"><i class="fa fa-yelp "></i>Ограничеине кол-ва интернет записей в день</a>
                             </li>
                              <li>
-                                <a href="progress.html"><i class="fa fa-circle-o "></i>Progressbars</a>
+                                <a href="progress.html"><i class="fa fa-yelp "></i>Очереденость очереди</a>
                             </li>
-                             <li>
-                                <a href="buttons.html"><i class="fa fa-code "></i>Buttons</a>
-                            </li>
-                             <li>
-                                <a href="icons.html"><i class="fa fa-bug "></i>Icons</a>
-                            </li>
-                             <li>
-                                <a href="wizard.html"><i class="fa fa-bug "></i>Wizard</a>
-                            </li>
-                             <li>
-                                <a href="typography.html"><i class="fa fa-edit "></i>Typography</a>
-                            </li>
-                             <li>
-                                <a href="grid.html"><i class="fa fa-eyedropper "></i>Grid</a>
-                            </li>
-                            
-                           
+
                         </ul>
                     </li>
                      <li>
-                        <a href="#"><i class="fa fa-yelp "></i>Extra Pages <span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-yelp "></i>Журналы<span class="fa arrow"></span></a>
                          <ul class="nav nav-second-level">
                             <li>
-                                <a href="invoice.html"><i class="fa fa-coffee"></i>Invoice</a>
+                                <a href="invoice.html"><i class="fa fa-yelp"></i>Статистика людей</a>
                             </li>
                             <li>
-                                <a href="pricing.html"><i class="fa fa-flash "></i>Pricing</a>
+                                <a href="pricing.html"><i class="fa fa-yelp "></i>Оценка работы</a>
                             </li>
-                             <li>
-                                <a href="component.html"><i class="fa fa-key "></i>Components</a>
-                            </li>
-                             <li>
-                                <a href="social.html"><i class="fa fa-send "></i>Social</a>
-                            </li>
-                            
-                             <li>
-                                <a href="message-task.html"><i class="fa fa-recycle "></i>Messages & Tasks</a>
-                            </li>
-                            
-                           
+
                         </ul>
                     </li>
                     <li>
-                        <a href="table.html"><i class="fa fa-flash "></i>Data Tables </a>
-                        
-                    </li>
-                     <li>
-                        <a href="#"><i class="fa fa-bicycle "></i>Forms <span class="fa arrow"></span></a>
-                         <ul class="nav nav-second-level">
-                           
-                             <li>
-                                <a href="form.html"><i class="fa fa-desktop "></i>Basic </a>
-                            </li>
-                             <li>
-                                <a href="form-advance.html"><i class="fa fa-code "></i>Advance</a>
-                            </li>
-                             
-                           
-                        </ul>
+                        <a href="users/index"><i class="fa fa-flash "></i>Управление сотрудниками</a>
+
                     </li>
                       <li>
-                        <a href="gallery.html"><i class="fa fa-anchor "></i>Gallery</a>
+                        <a href="gallery.html"><i class="fa fa-anchor "></i>Управление услугами</a>
                     </li>
                      <li>
-                        <a href="error.html"><i class="fa fa-bug "></i>Error Page</a>
+                        <a href="error.html"><i class="fa fa-bug "></i>Управление группами</a>
                     </li>
                     <li>
-                        <a href="login.html"><i class="fa fa-sign-in "></i>Login Page</a>
+                        <a href="login.html"><i class="fa fa-sign-in "></i>Выйти</a>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-sitemap "></i>Multilevel Link <span class="fa arrow"></span></a>
-                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#"><i class="fa fa-bicycle "></i>Second Level Link</a>
-                            </li>
-                             <li>
-                                <a href="#"><i class="fa fa-flask "></i>Second Level Link</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Link<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#"><i class="fa fa-plus "></i>Third Level Link</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-comments-o "></i>Third Level Link</a>
-                                    </li>
 
-                                </ul>
-
-                            </li>
-                        </ul>
-                    </li>
-                   
-                    <li>
-                        <a href="blank.html"><i class="fa fa-square-o "></i>Blank Page</a>
-                    </li>
                 </ul>
 
             </div>
