--- a/examples/app/views/layouts/_notification_panel.html.erb
+++ b/examples/app/views/layouts/_notification_panel.html.erb
@@ -1,59 +1,29 @@
 <div class="col-md-4">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <i class="fa fa-bell fa-fw"></i>Notifications Panel
+                                <i class="fa fa-bell fa-fw"></i>Уведомления
                             </div>
 
                             <div class="panel-body">
                                 <div class="list-group">
 
                                     <a href="#" class="list-group-item">
-                                        <i class="fa fa-twitter fa-fw"></i>3 New Followers
+                                        <i class="fa fa-twitter fa-fw"></i>Людей за сегодня
                                     <span class="pull-right text-muted small"><em>12 minutes ago</em>
                                     </span>
                                     </a>
                                     <a href="#" class="list-group-item">
-                                        <i class="fa fa-envelope fa-fw"></i>Message Sent
+                                        <i class="fa fa-envelope fa-fw"></i>Голосов за сегодня
                                     <span class="pull-right text-muted small"><em>27 minutes ago</em>
                                     </span>
                                     </a>
                                     <a href="#" class="list-group-item">
-                                        <i class="fa fa-tasks fa-fw"></i>New Task
+                                        <i class="fa fa-tasks fa-fw"></i>Uptime сервера
                                     <span class="pull-right text-muted small"><em>43 minutes ago</em>
                                     </span>
                                     </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-upload fa-fw"></i>Server Rebooted
-                                    <span class="pull-right text-muted small"><em>11:32 AM</em>
-                                    </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-bolt fa-fw"></i>Server Crashed!
-                                    <span class="pull-right text-muted small"><em>11:13 AM</em>
-                                    </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-warning fa-fw"></i>Server Not Responding
-                                    <span class="pull-right text-muted small"><em>10:57 AM</em>
-                                    </span>
-                                    </a>
-
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-bolt fa-fw"></i>Server Crashed!
-                                    <span class="pull-right text-muted small"><em>11:13 AM</em>
-                                    </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-warning fa-fw"></i>Server Not Responding
-                                    <span class="pull-right text-muted small"><em>10:57 AM</em>
-                                    </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-shopping-cart fa-fw"></i>New Order Placed
-                                    <span class="pull-right text-muted small"><em>9:49 AM</em>
-                                    </span>
-                                    </a>
+                                    
                                 </div>
                                 <!-- /.list-group -->
-                                <a href="#" class="btn btn-info btn-block">View All Alerts</a>
+                                <a href="#" class="btn btn-info btn-block">Посмотреть все уведомления</a>
                             </div>
