--- a/examples/public/assets/css/basic.css
+++ b/examples/public/assets/css/basic.css
@@ -7,12 +7,12 @@
 
     100% To use For Personal And Commercial Use.
     IN EXCHANGE JUST GIVE US CREDITS AND TELL YOUR FRIENDS ABOUT US
-   
+
     ========================================================  */
 
 
 /*==============================================
-    BASIC  STYLES    
+    BASIC  STYLES
     =============================================*/
 body {
     font-family: 'Open Sans', sans-serif;
@@ -21,7 +21,7 @@ body {
 
 #wrapper {
     width: 100%;
-    background: #202020;
+    background: #4380B8;
 }
 
 #page-wrapper {
@@ -60,7 +60,7 @@ body {
 
 
 /*==============================================
-    MENU STYLES    
+    MENU STYLES
     =============================================*/
 
 
@@ -150,7 +150,7 @@ body {
 
         .sidebar-collapse .nav > li > a {
             color: #fff;
-            background: #202020;
+            background: #4380B8;
             text-shadow: none;
             padding: 15px 40px;
             border-bottom: 1px solid #2F2E31;
@@ -162,7 +162,7 @@ body {
 
     .sidebar-collapse .nav > li > a:hover,
     .sidebar-collapse .nav > li > a:focus {
-        background: #0A0A0A;
+        background: #00CA79;
         outline: 0;
     }
 
@@ -213,10 +213,10 @@ body {
     margin-right: 10px;
 }
 /*==============================================
-    FOOTER  STYLES    
+    FOOTER  STYLES
     =============================================*/
 #footer-sec {
-    background-color:#000;
+    background-color: #00CA79;
     padding:20px 50px;
     color:#fff;
     font-size:12px;
@@ -230,7 +230,7 @@ body {
         text-decoration:none;
     }
 /*==============================================
-    MEDIA QUERIES     
+    MEDIA QUERIES
     =============================================*/
 
 @media (min-width:768px) {
