--- a/examples/app/views/client_restrictions/index.html.erb
+++ b/examples/app/views/client_restrictions/index.html.erb
@@ -2,3 +2,4 @@
   <%= restriction.name %>:
   <%= restriction.count %>  <%= "<a href=/client_restrictions/edit?id=#{restriction.id}>" %>Редактировать</a><br>
 <% end %>
+<a href="http://localhost:9292/admin/index">На главную</a>
