--- a/examples/app/views/groups/edit.html.erb
+++ b/examples/app/views/groups/edit.html.erb
@@ -2,5 +2,5 @@
 <form action="update" method="get">
   Имя: <input type="text" name="group[name]" value= '<%= group.name %>'> <br>
   <input type="hidden" name="id" value=<%= group.id %>> <br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Сохранить">
 </form>
