--- a/examples/app/views/layouts/_nav_left.html.erb
+++ b/examples/app/views/layouts/_nav_left.html.erb
@@ -18,19 +18,19 @@
 
 
                     <li>
-                        <a class="active-menu" href="index.html"><i class="fa fa-dashboard "></i>Панель инструментов</a>
+                        <a class="active-menu" href="index"><i class="fa fa-dashboard "></i>Панель инструментов</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-desktop "></i>Настройки<span class="fa arrow"></span></a>
                          <ul class="nav nav-second-level">
                             <li>
-                                <a href="panel-tabs.html"><i class="fa fa-yelp"></i>Ограничение кол-ва людей в день</a>
+                                <a href="http://localhost:9292/client_restrictions/index"><i class="fa fa-yelp"></i>Ограничение кол-ва людей в день</a>
                             </li>
                             <li>
-                                <a href="notification.html"><i class="fa fa-yelp "></i>Ограничеине кол-ва интернет записей в день</a>
+                                <a href="http://localhost:9292/client_restrictions/index"><i class="fa fa-yelp "></i>Ограничеине кол-ва интернет записей в день</a>
                             </li>
                              <li>
-                                <a href="progress.html"><i class="fa fa-yelp "></i>Очереденость очереди</a>
+                                <a href="http://localhost:9292/client_restrictions/index"><i class="fa fa-yelp "></i>Очереденость очереди</a>
                             </li>
 
                         </ul>
@@ -39,7 +39,7 @@
                         <a href="#"><i class="fa fa-yelp "></i>Журналы<span class="fa arrow"></span></a>
                          <ul class="nav nav-second-level">
                             <li>
-                                <a href="invoice.html"><i class="fa fa-yelp"></i>Статистика людей</a>
+                                <a href="http://localhost:9292/admin/logs"><i class="fa fa-yelp"></i>Общие</a>
                             </li>
                             <li>
                                 <a href="pricing.html"><i class="fa fa-yelp "></i>Оценка работы</a>
@@ -48,14 +48,14 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="users/index"><i class="fa fa-flash "></i>Управление сотрудниками</a>
+                        <a href="http://localhost:9292/users/index"><i class="fa fa-flash "></i>Управление сотрудниками</a>
 
                     </li>
                       <li>
-                        <a href="gallery.html"><i class="fa fa-anchor "></i>Управление услугами</a>
+                        <a href="http://localhost:9292/services/index"><i class="fa fa-anchor "></i>Управление услугами</a>
                     </li>
                      <li>
-                        <a href="error.html"><i class="fa fa-bug "></i>Управление группами</a>
+                        <a href="http://localhost:9292/groups/index"></i>Управление группами</a>
                     </li>
                     <li>
                         <a href="login.html"><i class="fa fa-sign-in "></i>Выйти</a>
