--- a/examples/app/views/services/edit.html.erb
+++ b/examples/app/views/services/edit.html.erb
@@ -4,5 +4,5 @@
   Буквенное обозначение в электронной очереди <br>
   Буква: <input type="text" name="service[world_of_alphabet]" value= '<%= service.world_of_alphabet %>'> <br>
   <input type="hidden" name="id" value=<%= service.id %>> <br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Сохранить">
 </form>
