--- a/examples/app/views/turns/registration.html.erb
+++ b/examples/app/views/turns/registration.html.erb
@@ -15,7 +15,7 @@
     </form>
     </br></br>
     <p><a href="internet_registration"><button type="button" class="btn btn-info btn-lg btn-block">Записаться на определенную дату и время</button></a></p></br>
-    <p><button type="button" class="btn btn-info btn-lg btn-block">Оценить качество предоставленной услуги</button></p></br>
+    <p><a href="http://localhost:9292/logs/vote"><button type="button" class="btn btn-info btn-lg btn-block">Оценить качество предоставленной услуги</button></a></p></br>
   </div>
 
 </body>
