--- a/examples/app/views/users/edit.html.erb
+++ b/examples/app/views/users/edit.html.erb
@@ -1,9 +1,12 @@
+<body style="background-color:white;">
+<%= render :head %>
 <p><%= notice %></p>
 
-<form action="update" method="get">
-  Имя: <input type="text" name="user[name]" value= '<%= user.name %>'> <br>
-<input type="text" name="user[group_id]" value= '<%= user.group_id %>'> <br>
+<form action="update" method="get" class="">
+  Имя: <input class="form-control" type="text" name="user[name]" value= '<%= user.name %>'> <br>
+<input class="form-control" type="text" name="user[group_id]" value= '<%= user.group_id %>'> <br>
   Группа:
   <input type="hidden" name="id" value=<%= user.id %>> <br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Сохранить" name="">
 </form>
+</body>
