--- a/examples/app/views/users/index.html.erb
+++ b/examples/app/views/users/index.html.erb
@@ -3,4 +3,5 @@
 <% users.each do |user| %>
 <p> <%= user.name %> <%= user.group.name %> <%= "<a href=/users/edit?id=#{user.id}>" %>Редактировать</a> <%= "<a href=/users/destroy?id=#{user.id}>" %>Удалить</a></p>
 <% end %>
-<a href="new">Добавить нового пользователя</a>
+<a href="new">Добавить нового пользователя</a><br>
+<a href="http://localhost:9292/admin/index">На главную</a>
